--- a/src/static/css/header.scss
+++ b/src/static/css/header.scss
@@ -191,7 +191,7 @@
 .hero{
 	background: #fff url(../img/hero.jpg) no-repeat center top fixed;
 	background-size: cover;
-	// min-height: 500px;
+	min-height: 500px;
 	position: relative;
 	overflow: hidden;
 	width: 100%;
