--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -413,10 +413,11 @@ label.error {
 .hero {
   background: #fff url(../img/hero.jpg) no-repeat center top fixed;
   background-size: cover;
+  min-height: 500px;
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   font-family: "Montserrat", serif;
   color: #fff;
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); }
@@ -576,15 +577,15 @@ footer {
       margin: 0 4px; }
       footer .social li a {
         display: block;
-        width: 36px;
-        height: 36px;
+        width: 50px;
+        height: 50px;
         border: 2px solid #1f2232;
         color: #1f2232;
-        font-size: 14px;
+        font-size: 20px;
         -webkit-border-radius: 50%;
         -moz-border-radius: 50%;
         border-radius: 50%;
-        line-height: 32px;
+        line-height: 46px;
         text-align: center; }
         footer .social li a:hover {
           background: #1f2232;
@@ -747,47 +748,23 @@ footer {
     pointer-events: none;
     width: 100%; }
 
-.gallery .img-container {
+.gallery .item {
   background: #1f2232; }
-  .gallery .img-container:before {
-    content: "\f002";
-    font-size: 30px;
-    color: #fff;
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 10;
-    opacity: 0;
-    font-family: "FontAwesome";
-    -ms-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); }
-  .gallery .img-container:hover:before {
-    opacity: 1;
-    -webkit-transition: all .2s ease-in-out .2s;
-    -moz-transition: all .2s ease-in-out .2s;
-    -o-transition: all .2s ease-in-out .2s;
-    transition: all .2s ease-in-out .2s; }
 .gallery img {
   -webkit-transition: all .2s ease-in-out 0s;
   -moz-transition: all .2s ease-in-out 0s;
   -o-transition: all .2s ease-in-out 0s;
-  transition: all .2s ease-in-out 0s;
-  -ms-transform: scale(1.1, 1.1);
-  -webkit-transform: scale(1.1, 1.1);
-  transform: scale(1.1, 1.1); }
+  transition: all .2s ease-in-out 0s; }
 .gallery a:hover img {
-  opacity: 0.5 !important;
-  -ms-transform: scale(1.2, 1.2);
-  -webkit-transform: scale(1.2, 1.2);
-  transform: scale(1.2, 1.2); }
-.gallery .gallery-item {
+  opacity: 0.5 !important; }
+
+#gallery-mansory .item {
   margin-bottom: 30px; }
   @media all and (max-width: 767px) {
-    .gallery .gallery-item {
-      padding: 0;
-      margin-bottom: 0px; } }
+    #gallery-mansory .item {
+      margin-bottom: 15px; } }
+  #gallery-mansory .item img {
+    width: 100%; }
 
 .visual-bar {
   height: 50vh;
