--- a/src/templates/pages/onepage.hbs
+++ b/src/templates/pages/onepage.hbs
@@ -13,7 +13,8 @@ layout: default.hbs
 	{{> partial-pricelist }}
 	{{> partial-visual }} --}}
 	{{> partial-single }}
-	{{> partial-gallery }}
+	{{> partial-masonry }}
+	{{!-- {{> partial-gallery }} --}}
 	{{> partial-single }}
 	{{> partial-visual }}
 	{{> partial-streamer }}
