--- a/src/templates/partials/partial-footer.hbs
+++ b/src/templates/partials/partial-footer.hbs
@@ -8,9 +8,9 @@
 					<li><a href="{{site.pinterest}}"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 					<li><a href="{{site.google}}"><i class="fa fa-google" aria-hidden="true"></i></a></li>
 				</ul>
-				
+
 				<p>© {{site.title}}. All Rights Reserved.<br />
-				Website by <a href="#">{{site.developer}}</a></p>
+				Design & Code by <a href="#">{{site.developer}}</a></p>
 
 				
 			</div>
