--- a/src/static/css/typography.scss
+++ b/src/static/css/typography.scss
@@ -51,7 +51,7 @@ a{
 		font-family: $font-2;
 		color: $color-1;
 		font-size: 15px;
-		text-transform: none;
+		// text-transform: none;
 		margin: 15px 0 0;
 		letter-spacing: 1px;
 	}
