--- a/src/templates/pages/onepage.hbs
+++ b/src/templates/pages/onepage.hbs
@@ -23,8 +23,8 @@ layout: default.hbs
 
 	{{!-- {{> partial-video }} --}}
 	{{> partial-address }}
-	{{!-- {{> partial-contactform }} --}}
-	{{!-- {{> partial-visual }} --}}
+	{{> partial-contactform }}
+	{{> partial-visual }}
 </main>
 {{> partial-footer }}
 
