--- a/src/templates/partials/partial-contactform.hbs
+++ b/src/templates/partials/partial-contactform.hbs
@@ -1,13 +1,13 @@
-<section class="section section-dark">
+<section class="section section-grey">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="h2">Say hi<small>Drop by or drop us a line.</small></h2>
+				<h2 class="h2">Say hi<small>Drop by or drop us a line</small></h2>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1">
-				{{> partial-map }}
+				{{!-- {{> partial-map }} --}}
 				<div class="row">
 					<form id="contact" class="" role="form">
 						<div class="col-sm-12">
@@ -35,7 +35,7 @@
 							</div>
 						</div>
 						<div class="col-sm-12 text-center">
-							<button type="submit" id="form-submit" name="submit" class="button">verstuur</button>
+							<button type="submit" id="form-submit" name="submit" class="button">Send</button>
 						</div>
 					</form>
 				</div>
