--- a/src/static/css/forms.scss
+++ b/src/static/css/forms.scss
@@ -2,11 +2,15 @@
 	margin-bottom: 25px;
 }
 .form-control{
-	font-family: $font-1;
+	font-family: $font-2;
 	-webkit-border-radius: 0px;
 	-moz-border-radius: 0px;
 	border-radius: 0px;
 	color: $color-2;
+	border-color: $form-border-color;
+	-webkit-box-shadow: none;
+		-moz-box-shadow: none;
+		box-shadow: none;
 
 	&:focus{
 		border-color: $color-1;
