--- a/src/templates/pages/onepage.hbs
+++ b/src/templates/pages/onepage.hbs
@@ -8,14 +8,15 @@ layout: default.hbs
 <main>
 	{{!-- {{> partial-streamer }} --}}
 	{{!-- {{> partial-about }} --}}
-	{{!-- {{> partial-visual }}
-	{{> partial-products }}
-	{{> partial-pricelist }}
+
+	
+	{{!-- {{> partial-pricelist }}
 	{{> partial-visual }} --}}
 	{{> partial-single }}
 	{{> partial-masonry }}
 	{{!-- {{> partial-gallery }} --}}
 	{{> partial-single }}
+	{{> partial-products }}
 	{{> partial-visual }}
 	{{> partial-streamer }}
 	{{!-- {{> partial-pricelist }} --}}
