--- a/src/templates/partials/partial-single.hbs
+++ b/src/templates/partials/partial-single.hbs
@@ -6,6 +6,7 @@
                 <p class="paragraph">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
                 </p>
+                {{!-- <a href="" class="button">Buy</a> --}} <a href="" class="button button-reversed">Buy</a> {{!-- <a href="" class="button  button-rounded">Buy</a> <a href="" class="button button-rounded button-reversed">Buy</a> --}}
             </div>
         </div>
     </div>
