--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -626,6 +626,10 @@ footer {
       font-size: 13px; }
       .button:hover {
         padding: 20px 40px; } }
+  .button-reversed {
+    border-color: #2d3a3a;
+    background: transparent;
+    color: #2d3a3a; }
   .button-rounded {
     -webkit-border-radius: 35px;
     -moz-border-radius: 35px;
