--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -32,7 +32,7 @@
 
 
 
-<div class="hero hero-overlay hero-blend2" style="background-image: url(assets/img/hero/2.jpg); background-position: top center;">
+<div class="hero hero-overlay hero-blend2" style="background-image: url(assets/img/01.jpg); background-position: top center;">
 
 	{{!-- IF SLIDESHOW --}}
 
