--- a/src/templates/pages/onepage.hbs
+++ b/src/templates/pages/onepage.hbs
@@ -7,7 +7,7 @@ layout: default.hbs
 {{> partial-header }}
 <main>
 	{{!-- {{> partial-streamer }} --}}
-	{{!-- {{> partial-about }} --}}
+	{{> partial-about }}
 
 	
 	{{!-- {{> partial-pricelist }}
