--- a/src/templates/partials/partial-about.hbs
+++ b/src/templates/partials/partial-about.hbs
@@ -1,4 +1,4 @@
-<section class="section section-line about">
+<section class="section section-line about" style="display: none;">
 	<div class="container">
 		{{!-- <div class="row">
 			<div class="col-sm-12 text-center">
