--- a/src/templates/partials/partial-contactform.hbs
+++ b/src/templates/partials/partial-contactform.hbs
@@ -6,7 +6,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
 				{{!-- {{> partial-map }} --}}
 				<div class="row">
 					<form id="contact" class="" role="form">
@@ -31,7 +31,7 @@
 						</div>
 						<div class="col-sm-6">
 							<div class="form-group">
-								<textarea class="form-control" id="message" name="message" placeholder="Bericht" value="" required="required" rows="6" maxlength="100" data-validation-required-message="Please enter a message."></textarea>
+								<textarea class="form-control" id="message" name="message" placeholder="Bericht" value="" required="required" rows="7" maxlength="100" data-validation-required-message="Please enter a message."></textarea>
 							</div>
 						</div>
 						<div class="col-sm-12 text-center">
