--- a/src/static/css/images.scss
+++ b/src/static/css/images.scss
@@ -123,7 +123,7 @@
 		margin-bottom: 30px;
 
 		@media all and(max-width: $breakpoint-mobile){
-			margin-bottom: 15px;
+			// margin-bottom: 15px;
 		}
 
 		& img{
