--- a/src/templates/partials/partial-about.hbs
+++ b/src/templates/partials/partial-about.hbs
@@ -1,4 +1,4 @@
-<section class="section section-line about" style="display: none;">
+<section class="section section-line" style="display: none;">
 	<div class="container">
 		{{!-- <div class="row">
 			<div class="col-sm-12 text-center">
@@ -31,8 +31,8 @@
 		</div>
 	</div>
 </section>
-<section class="section">
-	<div class="container">
+<section class="section about">
+	<div class="container wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<div class="img-container img-ratio-1-1 illustration">
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0">
-				<h2 class="h2">Detailed Analytics.<small>Search Engine</small></h2>
+				<h2 class="h2">Detailed Analytics<small>Search Engine</small></h2>
 				<p class="paragraph">
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
 				</p>
@@ -49,9 +49,8 @@
 	</div>
 </section>
 <section class="section section-grey">
-	<div class="container">
+	<div class="container wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 		<div class="row">
-			
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0 text-center">
 				<h2 class="h2">Affordable prices.<small>Select something that suits you.</small></h2>
 				<p class="paragraph">
