--- a/src/templates/partials/partial-contactform.hbs
+++ b/src/templates/partials/partial-contactform.hbs
@@ -1,4 +1,4 @@
-<section class="section section-grey">
+<section class="section section-grey wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -6,7 +6,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
+			<div class="col-sm-8 col-sm-offset-2">
 				{{!-- {{> partial-map }} --}}
 				<div class="row">
 					<form id="contact" class="" role="form">
