--- a/src/templates/partials/partial-products.hbs
+++ b/src/templates/partials/partial-products.hbs
@@ -1,27 +1,33 @@
-<section class="section section-line products">
+<section class="section section-line products wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
-				<h2 class="h2">Products.<small>We only use the best.</small></h2>
+				<h2 class="h2">Products<small>We only use the best.</small></h2>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center column">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="" title="Title goes here"><div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="https://scdailymakeover.files.wordpress.com/2015/07/hair-products-moroccanoil.jpg?w=600&h=600" class="img-responsive lazyload"></div></a>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-0 text-center column">
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="" title="Title goes here"><div class="img-container img-ratio-3-4 illustration"><img src="/assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div></a>
 				<h4 class="h4">Product $99</h4>
 				<p class="paragraph">Lorem ipsum dolor sit amet.</p>
 				<a href="#" class="button button-rounded"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Buy</a>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center column">
-				<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://s2.thcdn.com/productimg/0/600/600/45/10658745-1354808873-846357.jpg" class="img-responsive lazyload"></div>
-				<h4 class="h4">Product $99</h4>
-				<p class="paragraph">Lorem ipsum dolor sit amet</p>
-				<a href="#" class="button button-rounded">Buy</a>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-0 text-center column">
+				<div class="img-container img-ratio-3-4 illustration"><img src="/assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
+				{{!-- <h4 class="h4">Product $99</h4> --}}
+				{{!-- <p class="paragraph">Lorem ipsum dolor sit amet</p>
+				<a href="#" class="button button-rounded">Buy</a> --}}
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center">
-				<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://demandware.edgesuite.net/aabj_prd/on/demandware.static/-/Sites-SBS-SallyBeautySupply/default/dwe21ef3bf/images/large/SBS-140036.png" class="img-responsive lazyload"></div>
-				<h4 class="h4">Product $99</h4>
-				<p class="paragraph">Lorem ipsum dolor sit amet</p>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-0 text-center column">
+				<div class="img-container img-ratio-3-4 illustration"><img src="/assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
+				<h4 class="h4">$99.<sup>95</sup></h4>
+				<p class="paragraph">Yellow Coffee</p>
+				<a href="#" class="button button-reversed">Buy</a>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-0 text-center">
+				<div class="img-container img-ratio-3-4 illustration"><img src="/assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
+				<h4 class="h4">Product</h4>
+				<p class="paragraph">$99</p>
 				<a href="#" class="button button-reversed">Buy</a>
 			</div>
 		</div>
