--- a/src/templates/partials/partial-single.hbs
+++ b/src/templates/partials/partial-single.hbs
@@ -1,6 +1,6 @@
-<section class="section section-grey about">
+<section class="section section-grey">
     <div class="container">
-        <div class="row">
+        <div class="row wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
             <div class="col-xs-10 col-xs-offset-1 text-center">
                 <h2 class="h2">A cafe and bakery in&nbsp;Heemstede<small>Donec quam felis, ultricies nec</small></h2>
                 <p class="paragraph">
