--- a/src/templates/partials/partial-visual.hbs
+++ b/src/templates/partials/partial-visual.hbs
@@ -1,8 +1,8 @@
-<div class="visual-bar visual-bar-fixed visual-bar-noblend" style="background-image: url(assets/img/visual.jpg)">
+<div class="visual-bar visual-bar-fixed visual-bar-blend wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s" style="background-image: url(assets/img/visual.jpg)">
     <div class="container visual-bar-inner">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 text-center">
-                 {{!-- <p>Some of my recent projects</p> --}}
+                 <p>Some of my recent projects</p>
             </div>
         </div>
     </div>
