--- a/src/templates/partials/partial-address.hbs
+++ b/src/templates/partials/partial-address.hbs
@@ -1,4 +1,4 @@
-<section class="section section-line address contact">
+<section class="section section-line address contact wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -6,16 +6,16 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
+			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center column">
 				<div class="icon"><i class="fa fa-map-o" aria-hidden="true"></i></div>
 				<h4 class="h4">Address</h4>
-				<p class="paragraph">Gasthuisstraat 48, 2011 XP Haarlem, The Netherlands
+				<p class="paragraph m-b-0">Gasthuisstraat 48, 2011 XP Haarlem, The Netherlands
 				</p>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
+			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center column">
 				<div class="icon"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
 				<h4 class="h4">Openingstijden</h4>
-				<p class="paragraph">
+				<p class="paragraph m-b-0">
 					Ma t/m Vr 8.00 - 18.00<br />
 					Zaterdag 8.00 - 17.30<br />
 					Zondag 10.00 - 17.00
@@ -24,9 +24,9 @@
 			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
 				<div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
 				<h4 class="h4">Contact</h4>
-				<p class="paragraph">
-					E-mail : <a href="#">yourname@domain.com</a><br />
-					Bellen : +40 (0) 012 345 6789
+				<p class="paragraph m-b-0">
+					E-mail: <a href="#">yourname@domain.com</a><br />
+					Phone: +40 (0) 012 345 6789
 				</p>
 			</div>
 		</div>
