--- a/src/templates/partials/partial-streamer.hbs
+++ b/src/templates/partials/partial-streamer.hbs
@@ -1,4 +1,4 @@
-<div class="streamer">
+<div class="streamer wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
     <div class="container">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 text-center">
