--- a/src/static/css/buttons.scss
+++ b/src/static/css/buttons.scss
@@ -98,20 +98,19 @@
 }
 
 .back-to-top{
-	background-color: $color-3;
-	width: 100%;
+	background: rgba(255,255,255,.4);
+	position: fixed;
+	display: none;
+	z-index: 10;
+	bottom: 15px;
+	right: 15px;
+	width: 35px;
+	height: 35px;
 	border: none;
+	text-align: center;
+	letter-spacing: 0;
+	padding: 0;
 	color: $link-color;
-	padding: 20px 0;
-	line-height: 1;
-	font-size: 20px;
-	-webkit-transition: all 0.2s ease-in-out 0s;
-	-moz-transition: all 0.2s ease-in-out 0s;
-	-o-transition: all 0.2s ease-in-out 0s;
-	transition: all 0.2s ease-in-out 0s;
-
-	&:hover{
-		background-color: $link-color;
-		color: $color-3;
-	}
+	line-height: 25px;
+	font-size: 16px;
 }
