--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -686,20 +686,21 @@ footer {
       color: #2d3a3a; }
 
 .back-to-top {
-  background-color: #eef4f4;
-  width: 100%;
+  background: rgba(255, 255, 255, 0.4);
+  position: fixed;
+  display: none;
+  z-index: 10;
+  bottom: 15px;
+  right: 15px;
+  width: 35px;
+  height: 35px;
   border: none;
+  text-align: center;
+  letter-spacing: 0;
+  padding: 0;
   color: #2d3a3a;
-  padding: 20px 0;
-  line-height: 1;
-  font-size: 20px;
-  -webkit-transition: all 0.2s ease-in-out 0s;
-  -moz-transition: all 0.2s ease-in-out 0s;
-  -o-transition: all 0.2s ease-in-out 0s;
-  transition: all 0.2s ease-in-out 0s; }
-  .back-to-top:hover {
-    background-color: #2d3a3a;
-    color: #eef4f4; }
+  line-height: 25px;
+  font-size: 16px; }
 
 .lazyload {
   opacity: 0;
