--- a/src/templates/partials/partial-footer.hbs
+++ b/src/templates/partials/partial-footer.hbs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 text-center">
