--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -6,7 +6,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				{{!-- IF TEXT LOGO --}}
-				{{!-- <a href="#" class="logo">{{site.title}}</a> --}}
+				<a href="#" class="logo">{{site.title}}</a>
 
 				<nav class="navbar">
 					<button class="toggle-nav close-nav"><i class="md-close"></i></button>
@@ -47,19 +47,19 @@
 	<div class="container hero-inner">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
-				<img src="assets/img/logo.svg" class="img-logo">
-				{{!-- <img src="http://dummyimage.com/300x300/eee/fff.png" alt="John Doe" class="img-profile img-circle"> --}}
+				{{!-- <img src="assets/img/logo.svg" class="img-logo"> --}}
+				<img src="http://dummyimage.com/300x300/eee/fff.png" alt="John Doe" class="img-profile img-circle">
 				
-				{{!-- <h1 class="hero-h1">John Brown.</h1> --}}
-				{{!-- <p class="hero-first-line">{{site.intro}}</p> --}}
-				{{!-- <p class="hero-second-line">{{site.intro}}.</p> --}}
+				<h1 class="hero-h1">John Brown.</h1>
+				<p class="hero-first-line">{{site.intro}}</p>
+				<p class="hero-second-line">{{site.intro}}.</p>
 				{{!-- <a href="#" class="button button-rounded scroll-to" data-level="about">Meer</a> --}}
 				
 			</div>
 		</div>
 	</div>
 
-	<a href="#" class="button button-more button-outline-white scroll-to" data-level="about">Read more</a>
+	<a class="button button-more button-outline-white scroll-to" data-level="about">Read more</a>
 
 </div>
 
