--- a/src/static/css/images.scss
+++ b/src/static/css/images.scss
@@ -138,7 +138,6 @@
 	background: $color-1 url() no-repeat center center scroll;
 	background-size: cover;
 	color: #fff;
-
 	text-align: center;
 
 	&-inner{
@@ -151,7 +150,12 @@
 		transform: translate(0, -50%);
 		z-index: 10;
 		font-size: 30px;
+		
+		@media all and(max-width: $breakpoint-mobile){
+			font-size: 17px;
+		}
 	}
+
 
 	&-fixed{
 		background-attachment: fixed;
