--- a/src/templates/partials/partial-about.hbs
+++ b/src/templates/partials/partial-about.hbs
@@ -31,8 +31,8 @@
 		</div>
 	</div>
 </section>
-<section class="section about">
-	<div class="container wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
+<section class="section about wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
+	<div class="container">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<div class="img-container img-ratio-1-1 illustration">
@@ -48,8 +48,8 @@
 		</div>
 	</div>
 </section>
-<section class="section section-grey">
-	<div class="container wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
+<section class="section section-grey wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
+	<div class="container">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0 text-center">
 				<h2 class="h2">Affordable prices.<small>Select something that suits you.</small></h2>
