--- a/src/static/css/variables.scss
+++ b/src/static/css/variables.scss
@@ -5,7 +5,7 @@ $breakpoint-tablet: 991px;
 $breakpoint-mobile: 767px;
 
 
-$hero-height: 100vh;
+$hero-height: 100%;
 $graphic-height: 40vh;
 
 // FONTS
@@ -15,7 +15,7 @@ $font-1: 'Montserrat', serif;	// Headings
 $font-2: 'Raleway', serif;		// Text
 $font-logo: 'Merriweather', serif;	// Logo
 $font-logo-size: 30px;
-$font-logo-size-mobile: 25px;
+$font-logo-size-mobile: 20px;
 
 
 // Text colors
