--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -1,21 +1,19 @@
-
-
-<header class="header">
-	<button class="toggle-nav"><i class="md-menu"></i></button>
+<section id="preloader">
+	<div class="site-spinner"></div>
+</section>
+<header class="header clearfix">
+	<div class="toggle-nav"><i class="md-menu"></i></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
 				{{!-- IF TEXT LOGO --}}
-				<a href="#" class="logo">{{site.title}}</a>
-
+				<div href="#" class="logo">{{site.title}}</div>
 				<nav class="navbar">
 					<button class="toggle-nav close-nav"><i class="md-close"></i></button>
 					<ul>
-						{{!-- <li><a class="scroll-to" data-level="about">Home</a></li> --}}
 						<li><a class="scroll-to" data-level="about">About</a></li>
 						<li><a class="scroll-to" data-level="gallery">Gallery</a></li>
 						<li><a class="scroll-to" data-level="address">Contact</a></li>
-						{{!-- <li><a class="scroll-to" data-level="contact">Menu</a></li> --}}
 					</ul>
 				</nav>
 			</div>
