--- a/src/templates/partials/partial-about.hbs
+++ b/src/templates/partials/partial-about.hbs
@@ -34,12 +34,12 @@
 <section class="section about wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
 				<div class="img-container img-ratio-1-1 illustration">
 					<img src="assets/img/watch.jpg" class="img-responsive">
 				</div>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0">
 				<h2 class="h2">Detailed Analytics<small>Search Engine</small></h2>
 				<p class="paragraph">
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
