--- a/src/templates/partials/partial-contactform.hbs
+++ b/src/templates/partials/partial-contactform.hbs
@@ -6,7 +6,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2">
+			<div class="col-md-8 col-md-offset-2">
 				{{!-- {{> partial-map }} --}}
 				<div class="row">
 					<form id="contact" class="" role="form">
