--- a/src/templates/partials/partial-products.hbs
+++ b/src/templates/partials/partial-products.hbs
@@ -6,25 +6,25 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-0 text-center column">
+			<div class="col-xs-6 col-sm-3 text-center column">
 				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="" title="Title goes here"><div class="img-container img-ratio-3-4 illustration"><img src="/assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div></a>
-				<h4 class="h4">Product $99</h4>
-				<p class="paragraph">Lorem ipsum dolor sit amet.</p>
+				<h4 class="h4">$99.<sup>95</sup></h4>
+				<p class="paragraph">Yellow Coffee</p>
 				<a href="#" class="button button-rounded"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Buy</a>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-0 text-center column">
+			<div class="col-xs-6 col-sm-3 text-center column">
 				<div class="img-container img-ratio-3-4 illustration"><img src="/assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
-				{{!-- <h4 class="h4">Product $99</h4> --}}
-				{{!-- <p class="paragraph">Lorem ipsum dolor sit amet</p>
-				<a href="#" class="button button-rounded">Buy</a> --}}
+				<h4 class="h4">$99.<sup>95</sup></h4>
+				<p class="paragraph">Yellow Coffee</p>
+				<a href="#" class="button button-rounded">Buy</a>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-0 text-center column">
+			<div class="col-xs-6 col-sm-3 text-center column">
 				<div class="img-container img-ratio-3-4 illustration"><img src="/assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
 				<h4 class="h4">$99.<sup>95</sup></h4>
 				<p class="paragraph">Yellow Coffee</p>
 				<a href="#" class="button button-reversed">Buy</a>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-0 text-center">
+			<div class="col-xs-6 col-sm-3 text-center">
 				<div class="img-container img-ratio-3-4 illustration"><img src="/assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
 				<h4 class="h4">Product</h4>
 				<p class="paragraph">$99</p>
