--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				{{!-- IF TEXT LOGO --}}
-				<div href="#" class="logo">{{site.title}}</div>
+				<div class="logo">{{site.title}}</div>
 				<nav class="navbar">
 					<button class="toggle-nav close-nav"><i class="md-close"></i></button>
 					<ul>
