--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -434,14 +434,15 @@ label.error {
   border: none;
   position: fixed;
   top: 15px;
-  right: 20px;
-  line-height: 50px;
+  right: 15px;
+  line-height: 42px;
   font-weight: normal;
   font-size: 35px;
   padding: 0;
+  letter-spacing: 0;
   text-align: center;
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 40px;
   z-index: 100;
   display: none; }
   @media all and (max-width: 991px) {
