--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -6,7 +6,6 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				{{!-- IF TEXT LOGO --}}
 				<div class="logo">{{site.title}}</div>
 				<nav class="navbar">
 					<button class="toggle-nav close-nav"><i class="md-close"></i></button>
@@ -38,7 +37,7 @@
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
 				{{!-- <img src="assets/img/logo.svg" class="img-logo"> --}}
-				<img src="http://dummyimage.com/300x300/eee/fff.png" alt="John Doe" class="img-profile img-circle">
+				<img src="https://dummyimage.com/600x600/eee/fff.png" alt="John Doe" class="img-profile img-circle">
 				<h1 class="hero-h1">John Brown.</h1>
 				<p class="hero-first-line">{{site.intro}}</p>
 				<p class="hero-second-line">{{site.intro}}.</p>
