--- a/src/templates/pages/onepage.hbs
+++ b/src/templates/pages/onepage.hbs
@@ -19,7 +19,7 @@ layout: default.hbs
 	{{> partial-products }}
 	{{> partial-visual }}
 	{{> partial-streamer }}
-	{{!-- {{> partial-pricelist }} --}}
+	{{> partial-pricelist }}
 	{{!-- {{> partial-content }} --}}
 
 	{{!-- {{> partial-video }} --}}
