--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -230,9 +230,8 @@ hr {
     font-family: "Raleway", serif; }
   .pricelist li {
     list-style-type: none;
-    padding: 10px; }
-    .pricelist li:nth-child(odd) {
-      background-color: rgba(23, 61, 80, 0.06); }
+    padding: 10px;
+    border-bottom: 1px solid rgba(23, 61, 80, 0.06); }
 
 .form-group {
   margin-bottom: 22px; }
@@ -417,12 +416,10 @@ label.error {
         transform: translate(0, -50%); }
       .navbar li {
         float: none;
-        margin: 0 !important; }
+        margin: 0 0 2px !important; }
         .navbar li a {
           padding: 20px 0;
-          font-size: 16px; }
-          .navbar li a:hover {
-            color: #1f2232; }
+          font-size: 20px; }
           .navbar li a:before {
             display: none; } }
 
@@ -844,6 +841,49 @@ footer {
     bottom: 0;
     right: 0;
     background-color: rgba(50, 50, 50, 0.6); }
+
+.preview-buttons {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  width: 60px;
+  -ms-transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%); }
+  .preview-buttons button {
+    background-color: #000;
+    color: #fff;
+    border: 0;
+    width: 60px;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 26px;
+    margin-bottom: 1px;
+    letter-spacing: 0; }
+    .preview-buttons button:hover {
+      background-color: #ccc;
+      color: #000; }
+
+#preview {
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  padding: 0;
+  position: absolute; }
+
+.preview-scaled {
+  left: 50%;
+  -ms-transform: translate(-50%, 0%);
+  -webkit-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%); }
+
+.preview-phone {
+  top: 50%;
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border: 1px solid #ccc !important; }
 
 /*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
 .fancybox-wrap,
