--- a/src/static/css/preview.scss
+++ b/src/static/css/preview.scss
@@ -49,3 +49,18 @@
    transform: translate(-50%, -50%);
    border: 1px solid #ccc !important;
 }
+
+@mixin roan($direction, $color1, $color2){
+    background: red; /* For browsers that do not support gradients */
+      background: -webkit-linear-gradient(left top, red, yellow); /* For Safari 5.1 to 6.0 */
+      background: -o-linear-gradient(bottom right, red, yellow); /* For Opera 11.1 to 12.0 */
+      background: -moz-linear-gradient(bottom right, red, yellow); /* For Firefox 3.6 to 15 */
+      background: linear-gradient($direction, $color1, $color2); /* Standard syntax */
+}
+
+
+.gradient{
+    height: 300px;
+    width: 300px;
+    @include roan(to right, green, pink); 
+}
