--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -19,13 +19,13 @@
 		</div>
 	</div>
 </header>
-<div class="hero hero-overlay hero-blend2" style="background-image: url(assets/img/01.jpg); background-position: top center;">
+<div class="hero hero-overlay hero-blend2" style="background-image: url(http://www.want.nl/wp-content/uploads/2013/08/Triumph-Bonneville-Scrambler-want-3.jpg); background-position: top center;">
 	{{!-- IF SLIDESHOW --}}
-	<div class="background_cycler">
+	{{!-- <div class="background_cycler">
 		<div class="slide-1 active" style="background-image: url(assets/img/01.jpg);"></div>
 		<div class="slide-2" style="background-image: url(assets/img/02.jpg);"></div>
 		<div class="slide-3" style="background-image: url(assets/img/03.jpg);"></div>
-	</div>
+	</div> --}}
 	{{!-- If client has video --}}
 	{{!-- <div class="hero-video">
 		<video loop="true" autoplay="true" muted="muted" poster="http://www.mogadorcafe.nl/wp-content/uploads/BG_01.jpg">
@@ -36,11 +36,11 @@
 	<div class="container hero-inner">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
-				{{!-- <img src="assets/img/logo.svg" class="img-logo"> --}}
-				<img src="https://dummyimage.com/600x600/eee/fff.png" alt="John Doe" class="img-profile img-circle">
+				<img src="assets/img/logo.svg" class="img-logo">
+				{{!-- <img src="https://dummyimage.com/600x600/eee/fff.png" alt="John Doe" class="img-profile img-circle">
 				<h1 class="hero-h1">John Brown.</h1>
 				<p class="hero-first-line">{{site.intro}}</p>
-				<p class="hero-second-line">{{site.intro}}.</p>
+				<p class="hero-second-line">{{site.intro}}.</p> --}}
 				{{!-- <a href="#" class="button button-rounded scroll-to" data-level="about">Meer</a> --}}
 			</div>
 		</div>
