--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -54,7 +54,10 @@
 	{{> body }}
 	<!-- Our JavaScript -->
 	<script src="{{assets}}/js/app.js"></script>
+	<!-- Plugins -->
 	<script src="{{assets}}/js/plugins/jquery.validate.min.js" type="text/javascript"></script>
 	<script src="{{assets}}/js/plugins/contact-form.js" type="text/javascript"></script>
+	<!-- GoogleMaps -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhivOPXtbu0W0khYazsYZOXN0tgiG7Lwk&callback=myMap"></script>
 </body>
 </html>
