--- a/src/static/css/layout.scss
+++ b/src/static/css/layout.scss
@@ -28,6 +28,24 @@
 .m-b-0{
 	margin-bottom: 0px !important;
 }
+.m-b-10{
+	margin-bottom: 10px !important;
+}
+.m-b-20{
+	margin-bottom: 20px !important;
+}
+.m-b-30{
+	margin-bottom: 30px !important;
+}
+.m-b-40{
+	margin-bottom: 40px !important;
+}
+.m-b-50{
+	margin-bottom: 50px !important;
+}
+.m-b-60{
+	margin-bottom: 60px !important;
+}
 
 .wow{
 	visibility: hidden;
