--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -296,6 +296,24 @@ label.error {
 .m-b-0 {
   margin-bottom: 0px !important; }
 
+.m-b-10 {
+  margin-bottom: 10px !important; }
+
+.m-b-20 {
+  margin-bottom: 20px !important; }
+
+.m-b-30 {
+  margin-bottom: 30px !important; }
+
+.m-b-40 {
+  margin-bottom: 40px !important; }
+
+.m-b-50 {
+  margin-bottom: 50px !important; }
+
+.m-b-60 {
+  margin-bottom: 60px !important; }
+
 .wow {
   visibility: hidden; }
 
@@ -788,9 +806,13 @@ footer {
 
 .maps {
   margin-bottom: 60px; }
-  .maps iframe, .maps div {
+  .maps iframe {
     pointer-events: none;
     width: 100%; }
+
+#map {
+  pointer-events: none;
+  width: 100%; }
 
 .gallery .item {
   background: #1f2232; }
