--- a/src/templates/partials/partial-about.hbs
+++ b/src/templates/partials/partial-about.hbs
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 </section>
-<section class="section about wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
+<section class="section section-line about wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
@@ -48,16 +48,16 @@
 		</div>
 	</div>
 </section>
-<section class="section section-grey wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
+<section class="section wow fadeIn" data-wow-duration=".5s" data-wow-delay=".25s">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0 text-center">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 text-center">
 				<h2 class="h2">Affordable prices.<small>Select something that suits you.</small></h2>
 				<p class="paragraph">
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
 				</p>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0">
 				<div class="img-container img-ratio-1-1 illustration">
 					<img src="assets/img/watch.jpg" class="img-responsive">
 				</div>
