--- a/src/templates/partials/partial-contactform.hbs
+++ b/src/templates/partials/partial-contactform.hbs
@@ -7,7 +7,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				{{!-- {{> partial-map }} --}}
+				{{> partial-map }}
 				<div class="row">
 					<form id="contact" class="" role="form">
 						<div class="col-sm-12">
