--- a/src/templates/partials/partial-map.hbs
+++ b/src/templates/partials/partial-map.hbs
@@ -1,3 +1,23 @@
 {{!-- Google Maps --}}
 <div class="maps">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2429.635954735599!2d4.80158335160539!3d52.48572684642146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5fc666658a835%3A0xe86774a950f7b80d!2sDigital+Monkey!5e0!3m2!1snl!2snl!4v1474289543272" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
+    <div id="map" style="height:450px"></div>
+</div>
+
+<script type="text/javascript">
+    function myMap() {
+        var myCenter = new google.maps.LatLng(51.508742,-0.120850);
+        var mapCanvas = document.getElementById("map");
+        var mapOptions = {center: myCenter, zoom: 5};
+        var map = new google.maps.Map(mapCanvas, mapOptions);
+        var marker = new google.maps.Marker({position:myCenter});
+        marker.setMap(map);
+
+        var infowindow = new google.maps.InfoWindow({
+            content: "Hello World!"
+        });
+        infowindow.open(map,marker);
+    }
+</script>
+{{!-- <div class="maps">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2429.635954735599!2d4.80158335160539!3d52.48572684642146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5fc666658a835%3A0xe86774a950f7b80d!2sDigital+Monkey!5e0!3m2!1snl!2snl!4v1474289543272" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div> --}}
