--- a/src/templates/partials/partial-about.hbs
+++ b/src/templates/partials/partial-about.hbs
@@ -42,7 +42,7 @@
 			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0">
 				<h2 class="h2">Detailed Analytics<small>Search Engine</small></h2>
 				<p class="paragraph">
-					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+					Lorem ipsum dolor <wbr>HALLO sit amet, consectetuer adipiscing elit. <wbr>BLAAT Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
 				</p>
 			</div>
 		</div>
